--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						Technology</a> (B.Tech) in the stream of <a
 						href="https://en.wikipedia.org/wiki/Computer_science_and_engineering">Computer Science and
 						Engineering</a><br />
-					from "<a href="https://rguktsklm.ac.in/">Rajiv Gnadhi University of Knowledge and
+					from "<a href="https://rguktsklm.ac.in/">Rajiv Gandhi University of Knowledge and
 						Technologies</a>" .</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
