--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
+									<li><a href="https://github.com/Abdul-Mubeen-git" class="icon brands fa-github"><span class="label">GitHub</span></a>
 									</li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span
+									<li><a href="http://www.linkedin.com/in/abdul-mubeen-443740217" class="icon brands fa-linkedin-in"><span
 												class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
