--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						Technologies</a>" .</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
-					<li><a href="./resume.html" class="button scrolly">resume</a></li>
+					<li><a href="resume.html" class="button scrolly">resume</a></li>
 				</ul>
 			</div>
 		</section>
