--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
       <div class="w3-third">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <img id="img" src="../asst/bg.jpg" style="width: 100%" alt="Avatar" />
+            <img id="img" src="images/bg.jpg" style="width: 100%" alt="Avatar" />
             <div class="w3-display-bottomleft w3-container w3-text-black">
               <h2 style="color: white;">Abdul Mubeen</h2>
             </div>
