--- a/resume.html
+++ b/resume.html
@@ -111,6 +111,13 @@
               </div>
             </div>
             <br>
+            <p class="w3-large">
+              <b>Download Resume</b>
+            </p>
+            <div><a href="" class="w3-tag w3-teal w3-round-xlarge" style="text-decoration: none;">download</a></div>
+            <br>
+              
+            </div>
 
           </div>
         </div>
