--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
             </p>
             <div><a href="asst/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" style="text-decoration: none;" download="MubeenResume">download</a></div>
             <hr>
-            <div class="w3-card w3-center w3-round"><iframe src="asst/Resume.pdf" frameborder="0"></iframe></div>
+            <div class="w3-card w3-center w3-round"><embed src="asst/Resume.pdf" frameborder="0"></embed></div>
             <br>
 
           </div>
