--- a/resume.html
+++ b/resume.html
@@ -114,9 +114,9 @@
             <p class="w3-large">
               <b>Download Resume</b>
             </p>
-            <div><a href="asst/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" style="text-decoration: none;" download="MubeenResume">download</a></div>
+            <div><a href="assets/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" style="text-decoration: none;" download="MubeenResume">download</a></div>
             <hr>
-            <div class="w3-card w3-center w3-round"><embed src="asst/Resume.pdf" frameborder="0"></embed></div>
+            <div class="w3-card w3-center w3-round"><embed src="assets/Resume.pdf" frameborder="0"></embed></div>
             <br>
 
           </div>
