--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="shortcut icon" href="https://cdn1.vectorstock.com/i/1000x1000/91/70/letter-m-logo-flat-icon-style-vector-5099170.jpg" type="image/x-icon">
+	<link rel="shortcut icon" href="https://img.freepik.com/free-vector/branding-identity-corporate-vector-logo-letter-m-design_460848-13901.jpg" type="image/x-icon">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
