--- a/resume.html
+++ b/resume.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
-  <title>My Resume</title>
+  <title>Mubeen Abdul - Resume</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <style>
-    body{
+    body {
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.646);
     }
+
     html,
     body,
     h1,
@@ -23,6 +24,7 @@
     h6 {
       font-family: "Roboto", sans-serif;
     }
+
     #img {
       filter: blur(5px);
     }
@@ -30,163 +32,68 @@
 </head>
 
 <body class="w3-light-grey">
-  <!-- Page Container -->
   <div class="w3-content w3-margin-top" style="max-width: 1400px">
-    <!-- The Grid -->
     <div class="w3-row-padding">
       <!-- Left Column -->
       <div class="w3-third">
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
-            <img id="img" src="images/bg.jpg" style="width: 100%" alt="Avatar" />
-            <div class="w3-display-bottomleft w3-container w3-text-black">
-              <h2 style="color: white;">Abdul Mubeen</h2>
+            <img id="img" src="images/bg.jpg" style="width:100%" alt="Avatar">
+            <div class="w3-display-bottomleft w3-container w3-text-white">
+              <h2>Abdul Mubeen</h2>
             </div>
           </div>
           <div class="w3-container">
-            <p>
-              <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Java Full-Stack
-            </p>
-            <p>
-              <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Andhra Pradesh, India
-            </p>
-            <p>
-              <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>Mubeenabdul1999@gmail.com
-            </p>
-            <p>
-              <i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 8008372473
-            </p>
-            <hr />
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>JR. JAVA BACKEND DEVELOPER</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Andhra Pradesh, India</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>Mubeenabdul1999@gmail.com</p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 8008372473</p>
+            <hr>
 
-            <p class="w3-large">
-              <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
-            </p>
-            <p>
-              Java Full-Stack
-              <span class=" w3-small w3-tag w3-teal w3-round">current</span>
-            </p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 45%">
-                45%
-              </div>
-            </div>
-            <p>Application Development</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 80%">
-                <div class="w3-center w3-text-white">70%</div>
-              </div>
-            </div>
-            <p>C , Python , DBMS , MySql</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 75%">
-                75%
-              </div>
-            </div>
-            <p>HTML , CSS , JS , BootStrap , Computer Network</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 70%">
-                70%
-              </div>
-            </div>
-            <br>
+            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+            <p>Java, Spring Boot, REST, GraphQL</p>
+            <p>Junit, Wiremock, SQL</p>
+            <p>Splunk, Grafana, Git, CI/CD</p>
+            <p>Azure, MySQL, React</p>
             <hr>
-            <p class="w3-large">
-              <b>Language</b>
-            </p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 95%">
-                <div class="w3-center w3-text-white">English</div>
-              </div>
-            </div>
-            <br>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 90%">
-                <div class="w3-center w3-text-white">Hindi</div>
-              </div>
-            </div>
-            <br>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 95%">
-                <div class="w3-center w3-text-white">Telugu</div>
-              </div>
-            </div>
-            <br>
-            <p class="w3-large">
-              <b>Download Resume</b>
-            </p>
-            <div><a href="assets/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" style="text-decoration: none;" download="MubeenResume">download</a></div>
-            <hr>
-            <div class="w3-card w3-center w3-round"><embed src="assets/Resume.pdf" frameborder="0"></embed></div>
+
+            <p class="w3-large"><b>Languages</b></p>
+            <p>English (Fluent)</p>
+            <p>Hindi (Fluent)</p>
+            <p>Telugu (Fluent)</p>
             <br>
 
+            <p class="w3-large"><b>Download Resume</b></p>
+            <div><a href="assets/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" download>MubeenResume</a></div>
+            <br>
           </div>
         </div>
-        <br />
-
-        <!-- End Left Column -->
       </div>
 
       <!-- Right Column -->
       <div class="w3-twothird">
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Acadamic Porjects
+            <i class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Profile
+          </h2>
+          <p>I am a skilled backend developer with over a year of experience in designing and implementing robust systems using Java and Spring Boot. I specialize in building enterprise-grade REST and GraphQL APIs, solving complex problems, and optimizing backend processes. Currently, I contribute to the Seller Center Backend for Walmart's Ecommerce platform, focusing on order fulfillment, returns, and dispute resolution.</p>
+        </div>
+
+        <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <h2 class="w3-text-grey w3-padding-16">
+            <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experience
           </h2>
           <div class="w3-container">
-            <h5 class="w3-opacity">
-              <b>Application Development / CB Design</b>
-            </h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec. 2021 –
-              Mar. 2022
-            </h6>
-            <p>
-              During our final year project (Major), I Successfully developed
-              a mobile application named "CB-Design"<br />
-              This application serves the purpose of calculating safety
-              measures for buildings and structures. It achieves this by
-              taking user inputs and processing them according to the IS
-              456:2000 code book standards for the design of columns and
-              beams. This project involved a collaboration between our
-              department and the civil engineering department. We focused on
-              analysing data from their code book, addressing past issues, and
-              enhancing the overall design process.
-            </p>
-            <a href="https://drive.google.com/file/d/1B1G0TJp8Aq_KTTyFu9akBeu0NI1MrF7y/view?usp=sharing"
-              style="text-decoration: none" class="w3-small w3-tag w3-teal w3-round">App Link
-            </a>  
-            <a href="https://github.com/Abdul-Mubeen-git/finalProj"
-              style="text-decoration: none" class="w3-small w3-tag w3-teal w3-round">Code Link
-            </a>
-            <hr />
+            <h5 class="w3-opacity"><b>MThree | JAVA Junior Backend Developer – SDE</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2024 - Present</h6>
+            <p>Worked for the client Walmart on the Seller Fulfillment project. Developed new features and enhanced overall code quality by adding unit and functional tests. Addressed and resolved production issues through on-call support, monitored system metrics for stability and performance. Gained experience in Git and CI/CD pipelines.</p>
+            <hr>
           </div>
+
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Motion Detection </b></h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug. 2021 –
-              Nov. 2021
-            </h6>
-            <p>
-              It’s a ML (Machine learning) Image Processing Based system using
-              Python We have done a system which is capable of detecting the
-              motion in provided video steam (Input) by using image
-              processing.
-            </p>
-            <hr />
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Gesture Vernacular</b></h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-              Mar 2012
-            </h6>
-            <p>
-              is an NLP (Natural Language Processing) based system developed
-              using Python In this project, we created a system that takes
-              audio (speech) input from the user and employs NLP techniques to
-              generate output in the form of sign language videos.
-            </p>
-            <br />
+            <h5 class="w3-opacity"><b>Internship on Software Development Engineering</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2024 – Apr 2024</h6>
+            <p>Built full-stack applications using Java, Spring Boot, React, and MySQL. Optimized backend APIs and implemented DSA to improve code efficiency. Deployed applications to Microsoft Azure, learning cloud infrastructure and security best practices.</p>
           </div>
         </div>
 
@@ -195,61 +102,17 @@
             <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education
           </h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Graduation</b></h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul. 2018 -
-              Sep. 2022
-            </h6>
-            <p>
-              Rajiv Gandhi University of Knowledge and Technologies, SKLM
-              Nuzvid, AP.<br />
-              Rajiv Gandhi University of Knowledge and Technologies,
-              Srikakulam <br />
-              Bachelors of Technologies (B. Tech), <br />
-              Computer Science and Engineering. With 75%.
-            </p>
-            <hr />
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>+ Two (12<sup>th</sup>)</b></h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep. 2016 -
-              Apr. 2018
-            </h6>
-            <p>
-              Nuzvid, AP.<br />
-              Rajiv Gandhi University of Knowledge and Technologies,
-              Srikakulam<br />
-              Pre-University Course (PUC), MPC. With 68%.
-            </p>
-            <hr />
-          </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>SSC (10<sup>th</sup>)</b></h5>
-            <h6 class="w3-text-teal">
-              <i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr. 2016
-            </h6>
-            <p>
-              Vijaya High School,<br>
-              Challapalli, AP.<br />
-              Matriculation, SSC. With 8.3 GPA.
-            </p>
-            <br />
+            <h5 class="w3-opacity"><b>Rajiv Gandhi University of Knowledge and Technologies-IIIT</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2022</h6>
+            <p>Integrated B.Tech (2+4):<br>B.Tech in Computer Science and Engineering<br>Pre-University Course - MPC</p>
           </div>
         </div>
-
-        <!-- End Right Column -->
       </div>
-
-      <!-- End Grid -->
     </div>
-
-    <!-- End Page Container -->
   </div>
 
   <footer class="w3-container w3-teal w3-center w3-margin-top">
-    <p>
-    𝓐𝓜 - 𝓒𝓻𝓮𝓪𝓽𝓲𝓸𝓷𝓼 𝓪𝓷𝓭 𝓩𝓤𝓘 - 𝓒𝓸.𝓵𝓪𝓫  &copy; 2023 all copy rights reserved.</p>
+    <p>Mubeen Abdul &copy; 2025 | All Rights Reserved</p>
   </footer>
 </body>
 
