--- a/resume.html
+++ b/resume.html
@@ -64,6 +64,7 @@
             <br>
 
             <p class="w3-large"><b>Download Resume</b></p>
+            <div class="w3-card w3-center w3-round"><embed src="assets/Resume.pdf" frameborder="0"></embed></div>
             <div><a href="assets/Resume.pdf" class="w3-tag w3-teal w3-round-xlarge" download>MubeenResume</a></div>
             <br>
           </div>
